--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
-  max-width: 1280px;
-  min-width: 500px;
+  max-width: 100vw;
+  min-width: 100vw;
   margin: 0 auto;
   text-align: center;
 }
@@ -15,12 +15,10 @@
   width: 30vw;
   height: 100vh;
   position: "relative";
-  border: 1px solid black;
 }
 
 .map {
   width: 70vw;
   height: 100vh;
   position: "relative";
-  border: 1px solid black;
 }
